# DBD

./: .gitignore  NDVI_Test-Field_py.csv  README.md  field_ndvi_python.geojson
code/: fieldShapeModified.R  image_analysis_test.R  pathfinding_module.R  prescription_module.R
code/backend/: README.md  env.example  package.json  pyproject.toml  requirements.txt  run.py
code/backend/app/: __init__.py  main.py
code/backend/app/api/v1/: results.py  upload.py
code/backend/app/core/: config.py
code/backend/app/services/: __init__.py  file_storage.py
code/backend/app/services/field_map_generator/: __init__.py  fieldShapeModified.R  field_image_port.py  r_wrapper.py
code/backend/tests/: test_api.py
code/frontend/: BACKEND_INTEGRATION.md  INTEGRATION_GUIDE.md  README.md  package.json  tailwind.config.js
code/frontend/public/: index.html
code/frontend/public/geojson/: field_ndvi_python.geojson
code/frontend/src/: App.css  App.tsx  index.css
code/frontend/src/components/: FieldMapsView.tsx  FileCard.tsx  FileUploadSection.tsx  FileViewerModal.tsx  GalleryView.tsx  (+6 more)
docs/Mom/: MoM_Oct_16_2025.md  MoM_Oct_30_2025.md  MoM_Oct_9_2025.md  MoM_October_2,_2025.docx  MoM_September_12,_2025.docx  MoM_September_25,_2025.docx  TEMPLATE_MoM.md
docs/Notes/: MoM_Oct_9_2025.txt
docs/PresentationsVideos/: Sprint 1 Presentation.pptx  Sprint 2 Presentation.pptx  Sprint1Video.txt  Sprint2Video.txt
docs/Reports/: 01_Requirements.md  02_Requirements.md  DBD_Assignment1_Requirements.docx  DBD_Requirements_and_Specifications.docx  Project Description.docx
resources/: Links.md
(+5 files in other folders)
